created dataset "klein" some KC fixes